err/fastpt.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/FastPt-0.1.dev0.egg-info'...
Listing './lib/python3.5/site-packages/fastpt'...
Compiling './lib/python3.5/site-packages/fastpt/compiler.py'...
***   File "./lib/python3.5/site-packages/fastpt/compiler.py", line 133
    raise NotImplementedError, '_py'
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fastpt/template.py'...
***   File "./lib/python3.5/site-packages/fastpt/template.py", line 65
    exec self._text in ns
            ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/fastpt/tests'...
Listing './lib/python3.5/site-packages/fastpt/tests/data'...
Compiling './lib/python3.5/site-packages/fastpt/tests/test_basic.py'...
***   File "./lib/python3.5/site-packages/fastpt/tests/test_basic.py", line 56
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
